--- a/react-crash-course/my-first-app-with-ts/src/App.css
+++ b/react-crash-course/my-first-app-with-ts/src/App.css
@@ -1,24 +1,32 @@
-.Container{
+.Container {
   display: flex;
 }
-.Container > div {
-  border: 1px solid rgb(17, 17, 17);
+
+.Container>div {
+  border: 1px solid #ccc;
   padding: 10px;
 }
-.Column1, .Column2, .Column3 {
+
+.Column1,
+.Column2,
+.Column3 {
   flex: 1;
 }
+
 .Column1 {
-  background-color: rgb(174, 220, 235);
+  background-color: #ccc;
 }
+
 .Column2 {
-  background-color: rgb(156, 201, 186);
+  background-color: #ddd;
 }
+
 .Column3 {
-  background-color: rgb(183, 208, 236);
+  background-color: #eee;
 }
-@media (max-width: 768px){
-  .Container{
-  flex-direction: column;
+
+@media (max-width: 768px) {
+  .Container {
+    flex-direction: column;
   }
 }
