--- a/react-crash-course/my-first-app/src/App.css
+++ b/react-crash-course/my-first-app/src/App.css
@@ -1,24 +1,32 @@
-.Container{
+.Container {
   display: flex;
 }
-.Container > div {
+
+.Container>div {
   border: 1px solid #ccc;
   padding: 10px;
 }
-.Column1, .Column2, .Column3 {
+
+.Column1,
+.Column2,
+.Column3 {
   flex: 1;
 }
+
 .Column1 {
-  background-color: rgb(148, 154, 241);
+  background-color: #ccc;
 }
+
 .Column2 {
-  background-color: rgb(230, 120, 120);
+  background-color: #ddd;
 }
+
 .Column3 {
-  background-color: rgb(62, 214, 169);
+  background-color: #eee;
 }
-@media (max-width: 768px){
-  .Container{
-  flex-direction: column;
+
+@media (max-width: 768px) {
+  .Container {
+    flex-direction: column;
   }
 }
